--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 discord = "^1.7.3"
+gspread = "^3.7.0"
+oauth2client = "^4.1.3"
 
 [tool.poetry.dev-dependencies]
 
